{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 47,
  "lineage": "e2a2d90b-d4aa-f94e-bf26-463b76c89eb8",
  "resources": [
    {
      "module": "module.vp",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:120569644368:security-group/sg-0570799b5fccdeb85",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0570799b5fccdeb85",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "120569644368",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-default-sg"
            },
            "tags_all": {
              "Name": "dev-default-sg"
            },
            "vpc_id": "vpc-0b4072354f0180883"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vp.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vp",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "e_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eigw-0eb7db09695e0b14e",
            "tags": {
              "Name": "dev-e-igw"
            },
            "tags_all": {
              "Name": "dev-e-igw"
            },
            "vpc_id": "vpc-0b4072354f0180883"
          },
          "dependencies": [
            "module.vp.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vp",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_epi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02b681fe22869c743",
            "arn": "arn:aws:ec2:us-west-2:120569644368:elastic-ip/eipalloc-02b681fe22869c743",
            "domain": "vpc",
            "id": "eipalloc-02b681fe22869c743",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-235-202-64.us-west-2.compute.amazonaws.com",
            "public_ip": "44.235.202.64",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-epi"
            },
            "tags_all": {
              "Name": "dev-epi"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vp",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:120569644368:internet-gateway/igw-0dffebf2c761bac8d",
            "id": "igw-0dffebf2c761bac8d",
            "owner_id": "120569644368",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0b4072354f0180883"
          },
          "dependencies": [
            "module.vp.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vp",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02b681fe22869c743",
            "association_id": "eipassoc-046bbc7e931f5ae56",
            "connectivity_type": "public",
            "id": "nat-05b70f8c976679676",
            "network_interface_id": "eni-0ee99d3cb3f8717a0",
            "private_ip": "192.168.53.210",
            "public_ip": "44.235.202.64",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-080b57443480990f3",
            "tags": {
              "Name": "dev-Natgateway"
            },
            "tags_all": {
              "Name": "dev-Natgateway"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vp.aws_eip.nat_epi",
            "module.vp.aws_subnet.public",
            "module.vp.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vp",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:120569644368:route-table/rtb-075d33a9125e1daab",
            "id": "rtb-075d33a9125e1daab",
            "owner_id": "120569644368",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05b70f8c976679676",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-Private-Route-table"
            },
            "tags_all": {
              "Name": "dev-Private-Route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4072354f0180883"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vp.aws_eip.nat_epi",
            "module.vp.aws_nat_gateway.ngw",
            "module.vp.aws_subnet.public",
            "module.vp.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vp",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:120569644368:route-table/rtb-0aec45a5dcb377e77",
            "id": "rtb-0aec45a5dcb377e77",
            "owner_id": "120569644368",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dffebf2c761bac8d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-Public-Route-table"
            },
            "tags_all": {
              "Name": "dev-Public-Route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4072354f0180883"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vp.aws_internet_gateway.igw",
            "module.vp.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vp",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:120569644368:subnet/subnet-085619d173a27366b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "192.168.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085619d173a27366b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "120569644368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private-subnet-a-us-west-2a",
              "Tier": "Private"
            },
            "tags_all": {
              "Name": "dev-private-subnet-a-us-west-2a",
              "Tier": "Private"
            },
            "vpc_id": "vpc-0b4072354f0180883"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vp.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vp",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:120569644368:subnet/subnet-080b57443480990f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "192.168.53.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080b57443480990f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "120569644368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-publicsubnet-us-west-2a",
              "Tier": "Public"
            },
            "tags_all": {
              "Name": "dev-publicsubnet-us-west-2a",
              "Tier": "Public"
            },
            "vpc_id": "vpc-0b4072354f0180883"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vp.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vp",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:120569644368:vpc/vpc-0b4072354f0180883",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0cac9323a9334e45a",
            "default_route_table_id": "rtb-0d4365f6f54d17d86",
            "default_security_group_id": "sg-0570799b5fccdeb85",
            "dhcp_options_id": "dopt-0b9c6b5094aebd83d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b4072354f0180883",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d4365f6f54d17d86",
            "owner_id": "120569644368",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}